# csc572

./: .gitignore  README.md
lab1/: CMakeLists.txt
lab1/resources/: cel_frag.glsl  cel_vert.glsl  mesh_frag.glsl  mesh_vert.glsl  norms_frag.glsl  norms_geom.glsl  norms_vert.glsl  outline_frag.glsl  outline_vert.glsl  simple_frag.glsl  tex_frag0.glsl
lab1/src/: Program.cpp  Program.h  Shape.cpp  main.cpp  main.cpp.bak
lab2/: CMakeLists.txt
lab2/include/: camera.h  hittable.h  material.h  obj_loader.h  plane.h  ray.h  scene.h  sphere.h  triangle.h  vec3.h
lab2/src/: main.cpp  renderer.cpp
