cmake_minimum_required(VERSION 3.12)
project(raytracer LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
option(RT_WARNINGS "Enable extra warnings" ON)
file(GLOB RT_HEADERS CONFIGURE_DEPENDS include/*.h)
set(RT_SOURCES src/renderer.cpp src/main.cpp)
add_executable(raytrace ${RT_SOURCES} ${RT_HEADERS})
target_include_directories(raytrace PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
if (RT_WARNINGS)
  if (MSVC)
    target_compile_options(raytrace PRIVATE /W4)
  else()
    target_compile_options(raytrace PRIVATE -Wall -Wextra -Wpedantic)
  endif()
endif()
